--- a/app/assets/stylesheets/breathe/screen.css
+++ b/app/assets/stylesheets/breathe/screen.css
@@ -91,7 +91,6 @@ form input[type="text"],input[type="password"], input.text {
   margin:0 0 5px;
   height:30px
   padding: 7px 8px;
-  width: 450px;
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
 }
